fix skeleton and wrap link

--- a/src/assets/css/homepageHeader.scss
+++ b/src/assets/css/homepageHeader.scss
@@ -123,6 +123,9 @@
   }
 }
 
+@media (min-width: 992px){
+
+}
 
 @media (max-width: 992px) {
   .hompage__header__image-group {
